# familiar

./: .dockerignore  .dockerignore.deploy  .env.example  .gitignore  CLA.md  CLAUDE.md  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  check_mcps.sql  docker-compose.yml  encode.py  fix_mcp_migration.sql  log2  package.json
.github/workflows/: cla.yml  deploy.yml  release.yml
backend/: .gitignore  Cargo.toml  Dockerfile  Dockerfile.deploy  README.md  config.toml.example
backend/migrations/: 001_init.sql  002_reasoning.sql  003_user_mcps.sql  004_user_settings.sql  005_user_skills.sql  006_app_config.sql  007_app_skills.sql  008_user_profile_and_audit.sql  009_admin_config_columns.sql  010_session_expiry.sql  011_conversation_plans.sql  012_conversation_mcps.sql  013_conversation_token_usage.sql  014_github_oauth.sql  015_message_parent.sql  016_fix_spell_casts_format.sql  017_generation_jobs.sql  018_job_checkpoint.sql  019_remove_checkpoint.sql  020_messages_streaming.sql  021_models.sql  022_models_is_default.sql  023_app_config_tavily.sql  024_user_memories.sql  025_memories_conversation_scope.sql  026_compact_summary.sql  027_memory_category.sql  028_drop_is_summary.sql  029_invite_codes.sql  030_tsv_skip_multimodal.sql  031_fal_api_key.sql  032_cephalon_keys.sql  033_siliconflow.sql  034_token_usage_log.sql  035_token_usage_log_cache.sql  037_drop_app_config_system_prompt.sql  037_mimo_tts.sql  038_models_role.sql  039_mcp_catalog_table.sql  040_generation_jobs_latency.sql  (+21 more)
backend/src/: Subagent System Prompt.md  System Prompt.md  audit.rs  compact.rs  config.rs  db.rs  embedding.rs  errors.rs  main.rs  prompt_template.rs  sandbox.rs  state.rs  worker.rs
backend/src/prompt/: mod.rs
backend/src/prompt/skills/: visualizer-art.md  visualizer-chart.md  visualizer-core.md  visualizer-diagram.md  visualizer-ui.md
backend/src/prompt/templates/: main_base.md  main_compact.md  main_memory.md  sub_base.md  sub_fork.md  sub_fresh.md
backend/src/spells/: a2a_spell.rs  admin_spells.rs  ask_user_spell.rs  ast_spell.rs  command_spell.rs  file_spell.rs  file_spells.rs  generate_image_spell.rs  history_spell.rs  manage_mcp_spell.rs  memory_spell.rs  mod.rs  outline_spell.rs  plan_spell.rs  present_file_spell.rs  sandbox_spell.rs  script_spell.rs  search_spell.rs  search_spells.rs  shell_spells.rs  siliconflow_spell.rs  skill_spell.rs  sourcegraph_spell.rs  spawn_spell.rs  tavily_spell.rs  ui_spells.rs
backend/src/web/: admin.rs  auth.rs  conversations.rs  files.rs  github_oauth.rs  history.rs  invite_codes.rs  mcps.rs  mod.rs  models.rs  sessions.rs  settings.rs  share.rs  sse.rs  tts.rs  tunnel.rs  users.rs  ws.rs
codex/codex-rs/: Cargo.toml
codex/codex-rs/app-server/src/: codex_message_processor.rs
codex/codex-rs/config/src/: thread_config.rs
codex/codex-rs/config/src/thread_config/: remote.rs
codex/codex-rs/core/: Cargo.toml
codex/codex-rs/core/src/: agentix_stream.rs  client.rs  compact_tests.rs  lib.rs
codex/codex-rs/core/src/config/: config_tests.rs
codex/codex-rs/core/src/tools/handlers/: apply_patch.rs  autocheck.rs  mod.rs
codex/codex-rs/core/tests/: responses_headers.rs
codex/codex-rs/core/tests/suite/: client.rs  client_websockets.rs  stream_error_allows_next_turn.rs  stream_no_completed.rs
codex/codex-rs/login/src/: auth_env_telemetry.rs
codex/codex-rs/model-provider-info/src/: lib.rs  model_provider_info_tests.rs
codex/codex-rs/model-provider/src/: provider.rs
codex/codex-rs/realtime-webrtc/: Cargo.toml
desktop/: Cargo.toml  README.md
desktop/src/: app.rs  main.rs  state.rs
desktop/src/assets/: style.css
desktop/src/components/: input.rs  message.rs
desktop/src/llm/: anthropic.rs  mod.rs
desktop/src/pages/: chat.rs  settings.rs
desktop/src/sandbox/: mod.rs
desktop/src/storage/: config.rs  conversation.rs  mod.rs  paths.rs
desktop/src/tools/: mod.rs
docker/sandbox/: Dockerfile  README.md
familiar-mcp/: package.json
familiar-mcp/src/: index.ts
frontend/: .gitignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src-tauri/: Cargo.toml  tauri.android.conf.json  tauri.conf.json  tunnel-bridge.cjs
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/mcp-bundle/: package-lock.json  package.json
frontend/src-tauri/src/: browser.rs  lib.rs
frontend/src/api/: admin.ts  client.ts  profile.ts  types.ts
frontend/src/components/: AdminConfig.module.css  AdminConfig.tsx  AdminModelsPanel.module.css  AdminModelsPanel.tsx  AdminOverview.module.css  AdminOverview.tsx  AuditLogView.module.css  AuditLogView.tsx  Avatar.module.css  Avatar.tsx  BashWriteTools.tsx  ChatInput.module.css  ChatInput.tsx  CodeEditor.tsx  DiffView.module.css  DiffView.tsx  FilePreviewContent.tsx  InviteCodesPanel.module.css  InviteCodesPanel.tsx  LocalMcpSettings.tsx  MarkdownRenderer.tsx  McpSettings.module.css  McpSettings.tsx  MessageBubble.module.css  MessageBubble.tsx  ModelPicker.module.css  ModelPicker.tsx  PasswordResetModal.tsx  PlanTool.module.css  PlanTool.tsx  PrivacyConsentModal.module.css  PrivacyConsentModal.tsx  ProviderSelector.tsx  SearchPanel.module.css  SearchPanel.tsx  ShareModal.module.css  ShareModal.tsx  Sidebar.module.css  Sidebar.tsx  SkillsPanel.module.css  (+20 more)
frontend/src/constants/: providers.ts
frontend/src/hooks/: useChat.ts  useConversations.ts
frontend/src/pages/: AdminPage.module.css  AdminPage.tsx  ChatPage.module.css  ChatPage.tsx  LoginPage.module.css  LoginPage.tsx  PrivacyPage.module.css  PrivacyPage.tsx  SharedConversationPage.module.css  SharedConversationPage.tsx
frontend/src/store/: auth.shared.ts  auth.tsx  toast.ts
frontend/src/utils/: autoUpdate.ts  messagesToBubbles.ts  seasonalGreeting.ts  tauri.ts
scripts/: test_streaming.py
