[package]
name = "familiar"
version = "0.2.0"
edition = "2024"

[[bin]]
name = "familiar"
path = "src/main.rs"

[dependencies]
agentix = { path = "../../agentix/agentix", features = ["mcp"] }
rmcp = { version = "1.1", features = ["client", "transport-async-rw"] }

# Web
axum = { version = "0.8", features = ["macros", "ws", "multipart"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }

# Async
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
async-stream = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"

# Database
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }
pgvector = { version = "0.4", features = ["sqlx"] }

# Auth
bcrypt = "0.17"
uuid = { version = "1", features = ["serde", "v4"] }

# HTTP client (embedding API)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }


# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

# Error handling
anyhow = "1"

# Random token generation
getrandom = "0.2"
glob = "0.3.3"
bytes = "1.11.1"
config = "0.15.21"
chrono = { version = "0.4.44", features = ["serde"] }
