[package]
name = "familiar"
version = "0.3.1"
edition = "2024"

[[bin]]
name = "familiar"
path = "src/main.rs"

[dependencies]
agentix = { version = "0.26", features = ["mcp", "claude-code"] }
rmcp = { version = "1.1", features = ["client", "transport-async-rw"] }

# Web
axum = { version = "0.8", features = ["macros", "ws", "multipart"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }

# Async
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
async-stream = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"
base64 = "0.22"
md5 = "0.7"

# Database
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "json",
] }
pgvector = { version = "0.4", features = ["sqlx"] }

# Auth
bcrypt = "0.17"
uuid = { version = "1", features = ["serde", "v4"] }

# HTTP client (embedding API)
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }


# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

# Error handling
anyhow = "1"

# Random token generation
getrandom = "0.2"
glob = "0.3.3"
bytes = "1.11.1"
config = "0.15.21"
chrono = { version = "0.4.44", features = ["serde"] }
zip = "2"
walkdir = "2"
dashmap = "6"
tera = "1"
regex = "1"
similar = "2"
tree-sitter = "0.26.8"
tree-sitter-rust = "0.24.2"
tiktoken-rs = "0.5"

# Integration tests against a live Postgres. Set DATABASE_URL_TEST to the
# admin connection string (e.g. postgres://postgres:postgres@localhost/postgres)
# — tests provision and drop a per-run database and run all migrations.
