[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = "2"
tokio = { version = "1", features = ["full"] }
chromiumoxide = { version = "0.7", features = ["tokio-runtime"] }
base64 = "0.22"
futures = "0.3"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
url = "2"
agentix = { path = "../../../agentix/agentix", features = ["mcp-server"] }
# ^ local path to get pub McpService; switch back to version = "0.9.x" after next publish
rmcp = { version = "1.1", features = ["server", "transport-async-rw"] }
