[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = "2"
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
futures = "0.3"
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
url = "2"
agentix = { version = "0.20.0", features = ["mcp-server"] }
rmcp = { version = "1.1", features = ["server", "transport-async-rw"] }

# Updater + process: desktop + Android. Android prompts for "install from
# unknown sources" the first time; everything else is the same flow.
[target."cfg(any(target_os = \"macos\", windows, target_os = \"linux\", target_os = \"android\"))".dependencies]
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
