[package]
name = "codex-realtime-webrtc"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "codex_realtime_webrtc"
path = "src/lib.rs"

[dependencies]
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }

[lints]
workspace = true
